--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     padding: 0 20px;
     color: #333;
     background-color: #f9f9f9;
+    word-break: break-word;
   }
   h1 {
     text-align: center;
     margin-bottom: 40px;
     font-weight: 700;
+    font-size: 28px
   }
   h2 {
     margin-top: 40px;
