--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     border-left: 5px solid #4a90e2;
     padding-left: 12px;
     color: #2a2a2a;
+    font-size: 24px
   }
   p {
     margin-bottom: 12px;
