--- a/20250520.html
+++ b/20250520.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>톡톡케어 개인정보처리방침/n(2025-05-20 ~ 2025-07-08)</title>
+<title>톡톡케어 개인정보처리방침/n(2025.5.20.~2025.7.8.)</title>
 <style>
   body {
     font-family: 'Noto Sans KR', sans-serif, Arial, sans-serif;
