--- a/20250520.html
+++ b/20250520.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>톡톡케어 개인정보처리방침/n(2025.5.20.~2025.7.8.)</title>
+<title>톡톡케어 개인정보처리방침(2025.5.20.~2025.7.8.)</title>
 <style>
   body {
     font-family: 'Noto Sans KR', sans-serif, Arial, sans-serif;
@@ -47,7 +47,7 @@
 </style>
 </head>
 <body>
-<h1>톡톡케어 개인정보처리방침</h1>
+<h1>톡톡케어 개인정보처리방침/n(2025.5.20.~2025.7.8.)</h1>
 
 <p>톡톡케어는 정보주체의 자유와 권리 보호를 위해 <strong>「개인정보 보호법」</strong> 및 관계 법령이 정한 바를 준수하여, 적법하게 개인정보를 처리하고 안전하게 관리하고 있습니다. 이에 <strong>「개인정보 보호법」 제30조</strong>에 따라 정보주체에게 개인정보의 처리와 보호에 관한 절차 및 기준을 안내하고, 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p>
 
