--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: 'Noto Sans KR', sans-serif, Arial, sans-serif;
-    line-height: 1.6;
+    line-height: 1.8;
     max-width: 900px;
     margin: 30px auto;
     padding: 0 20px;
@@ -19,7 +19,7 @@
     text-align: center;
     margin-bottom: 40px;
     font-weight: 700;
-    font-size: 28px
+    font-size: 28px;
   }
   h2 {
     margin-top: 40px;
@@ -28,14 +28,17 @@
     border-left: 5px solid #4a90e2;
     padding-left: 12px;
     color: #2a2a2a;
-    font-size: 20px
+    font-size: 20px;
   }
-  p {
+  p, li {
     margin-bottom: 12px;
+    color: #444;
   }
   ul {
     margin-left: 20px;
     margin-bottom: 12px;
+    list-style-type: disc;
+    padding-left: 20px;
   }
   a {
     color: #1a73e8;
@@ -44,6 +47,24 @@
   a:hover {
     text-decoration: underline;
   }
+  strong {
+      font-weight: 600;
+  }
+  table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+  }
+  th, td {
+      border: 1px solid #ddd;
+      padding: 12px;
+      text-align: left;
+  }
+  th {
+      background-color: #f2f2f2;
+      font-weight: 600;
+  }
 </style>
 </head>
 <body>
@@ -51,52 +72,94 @@
 
 <p>톡톡케어는 정보주체의 자유와 권리 보호를 위해 <strong>「개인정보 보호법」</strong> 및 관계 법령이 정한 바를 준수하여, 적법하게 개인정보를 처리하고 안전하게 관리하고 있습니다. 이에 <strong>「개인정보 보호법」 제30조</strong>에 따라 정보주체에게 개인정보의 처리와 보호에 관한 절차 및 기준을 안내하고, 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p>
 
-<h2>제1조(처리하는 개인정보의 항목)</h2>
-<p>톡톡케어는 사용자의 이름, 연락처, 위치정보, 건강정보 등 어떠한 개인정보도 수집하지 않습니다.</p>
-<p>사용자가 입력한 대화 내용은 웹페이지 내 채팅창에만 표시되며, 별도로 저장되지 않습니다. 채팅창에 표시된 모든 대화 내용을 OpenAI API로 전달하여 답변을 생성하는 방식으로 작동합니다.</p>
-<p>‘대화 초기화’ 버튼을 누르거나 웹페이지 또는 앱을 새로 고침하면 모든 대화 내용은 완전히 초기화됩니다. 해당 정보는 브라우저 메모리에만 일시적으로 존재하며, 개발자 서버 및 데이터베이스에는 어떠한 대화 내용도 저장되거나 수집되지 않습니다.</p>
+<h2>제1조 (개인정보의 처리 목적)</h2>
+<p>톡톡케어는 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 「개인정보 보호법」에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</p>
+<ul>
+    <li><strong>AI 챗봇 서비스 제공:</strong> 사용자가 입력한 채팅 내용을 외부 AI 모델로 전송하여 답변을 생성하고, 관련 정보 출처 검색 결과를 제공</li>
+    <li><strong>서비스 운영 및 개선:</strong> 서비스 안정성 확보, 부정 이용 방지, 이용 현황 통계 분석을 위해 개인 식별이 불가능한 서비스 로그를 활용</li>
+</ul>
 
-<h2>제2조(개인정보의 처리 목적)</h2>
-<p>개인정보를 수집하지 않기 때문에 처리 목적이 존재하지 않습니다.</p>
+<h2>제2조 (처리하는 개인정보의 항목)</h2>
+<p>톡톡케어는 회원가입 절차 없이 서비스를 제공하며, 사용자를 특정할 수 있는 이름, 전화번호, 이메일, IP주소 등의 정보를 수집하지 않습니다. 서비스 제공 과정에서 처리되는 개인정보 및 데이터는 다음과 같습니다.</p>
+<ul>
+    <li><strong>채팅 내용:</strong> 사용자가 채팅창에 직접 입력하는 질문 내용(건강 정보 등 포함) 및 이를 기반으로 생성된 검색어
+        <ul style="margin-top: 8px;"><li><strong>처리 방식:</strong> 위 정보는 답변 및 검색 결과 생성을 위한 API 호출 목적으로만 일시적으로 메모리에서 처리되며, 톡톡케어의 서버 및 데이터베이스에 기록 또는 저장되지 않습니다.</li></ul>
+    </li>
+    <li><strong>서비스 로그:</strong> 사용자에게 제공된 참고문헌 링크(URL)
+        <ul style="margin-top: 8px;"><li><strong>처리 방식:</strong> 위 정보는 개인 식별 정보와 결합되지 않으며, 서비스 품질 분석을 위해 서버 로그 시스템에 일시적으로 기록됩니다. 이 로그는 호스팅 플랫폼(Render)의 정책에 따라 단기간 보관 후 자동으로 파기됩니다.</li></ul>
+    </li>
+</ul>
 
-<h2>제3조(개인정보의 처리 및 보유 기간)</h2>
-<p>개인정보를 수집하지 않기 때문에 처리 및 보유 기간이 존재하지 않습니다.</p>
+<h2>제3조 (개인정보의 처리 및 보유 기간)</h2>
+<p>① 채팅 내용은 서버에 저장되지 않으므로 개인정보 보유 기간이 별도로 존재하지 않으며, AI 답변 생성 및 사용자에게 전달되는 즉시 파기됩니다.</p>
+<p>② 서비스 로그는 호스팅 플랫폼(Render)의 로그 보관 정책에 따라 통상 수일 내지 수주간 보관된 후 자동으로 파기됩니다.</p>
 
-<h2>제4조(개인정보의 파기 절차 및 방법에 관한 사항)</h2>
-<p>개인정보를 수집하지 않기 때문에 파기 절차 및 방법이 존재하지 않습니다.</p>
+<h2>제4조 (개인정보의 제3자 제공 및 국외 이전에 관한 사항)</h2>
+<p>톡톡케어는 원활한 서비스 제공을 위해 아래와 같이 정보주체의 개인정보를 제3자에게 제공(국외 이전)하고 있습니다.</p>
+<table>
+    <thead>
+        <tr>
+            <th>제공받는 자</th>
+            <th>제공 목적</th>
+            <th>제공하는 개인정보 항목</th>
+            <th>보유 및 이용기간</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>OpenAI, L.L.C. (미국)</td>
+            <td>AI 챗봇 답변 생성</td>
+            <td>사용자가 채팅창에 입력한 내용</td>
+            <td>OpenAI의 데이터 처리 방침에 따름</td>
+        </tr>
+        <tr>
+            <td>Google, LLC (미국)</td>
+            <td>질문과 관련된 정보 검색 및 출처 링크 제공</td>
+            <td>사용자의 질문 내용을 기반으로 생성된 검색어</td>
+            <td>Google의 데이터 처리 방침에 따름</td>
+        </tr>
+    </tbody>
+</table>
 
-<h2>제5조(개인정보의 제3자 제공에 관한 사항)</h2>
-<p>톡톡케어는 개인정보를 직접 저장하거나 수집하지 않으며, 제3자에게 제공하지 않습니다.</p>
-<p>다만, OpenAI API를 이용하여 답변을 생성하는 특성상 사용자가 입력한 데이터는 OpenAI의 개인정보처리방침에 따라 수집 및 처리될 수 있습니다.</p>
+<h2>제5조 (개인정보의 파기절차 및 파기방법)</h2>
+<p>톡톡케어는 개인정보 처리 목적이 달성된 경우 지체없이 해당 개인정보를 파기합니다. 사용자의 채팅 내용은 서버에 저장되지 않고 실시간으로 처리 후 파기되므로 별도의 파기 절차와 기한은 존재하지 않습니다. 사용자는 '대화 초기화' 버튼을 누르거나 앱 또는 웹페이지를 새로 고침하여 기기에 임시로 표시되던 대화 내용을 언제든지 직접 파기할 수 있습니다.</p>
 
-<h2>제6조(개인정보의 안전성 확보조치에 관한 사항)</h2>
+<h2>제6조 (정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)</h2>
+<p>① 정보주체는 톡톡케어에 대해 언제든지 개인정보 처리에 관한 의견 제출 및 고충 처리를 요구할 수 있습니다.</p>
+<p>② 톡톡케어는 사용자의 대화 내용을 서버에 저장하지 않으므로, <strong>「개인정보 보호법」 제35조</strong>에 따른 개인정보의 열람, <strong>제36조</strong>에 따른 정정·삭제, <strong>제37조</strong>에 따른 처리정지 요구는 기술적으로 불가능합니다. 사용자는 앱 내 '대화 초기화' 기능 등을 통해 직접 대화 내용을 삭제함으로써 정보 삭제 및 처리정지와 동일한 효과를 얻을 수 있습니다.</p>
+<p>③ 제1항에 따른 권리 행사는 제8조에 명시된 개인정보 보호책임자의 연락처를 통해 하실 수 있으며, 톡톡케어는 이에 대해 지체 없이 조치하겠습니다.</p>
+
+<h2>제7조 (개인정보의 안전성 확보조치에 관한 사항)</h2>
 <p>톡톡케어는 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</p>
 <ul>
-  <li>관리적 조치: 내부 관리계획 수립 및 시행</li>
-  <li>기술적 조치: 서버 해킹에 대한 방어 계획 수립 및 시행</li>
+    <li><strong>기술적 조치:</strong> 사용자 기기와 서버, 서버와 외부 API(OpenAI, Google) 간의 모든 통신 구간을 암호화(SSL/TLS)하여 전송 중 데이터가 유출되지 않도록 보호합니다.</li>
+    <li><strong>관리적 조치:</strong> 개인정보 관련 취급자를 대표자 1인으로 최소화하여 관리하고 있습니다.</li>
 </ul>
 
-<h2>제7조(정보주체와 법정대리인의 권리·의무 및 행사방법에 관한 사항)</h2>
-<p>① 정보주체는 톡톡케어에 대해 언제든지 개인정보 열람·전송·정정·삭제·처리정지 및 동의 철회 등을 요구할 수 있습니다(이하 “권리 행사”라 함).</p>
-<p>※ 14세 미만 아동의 권리 행사는 법정대리인이 직접 해야 하며, 14세 이상의 미성년자인 정보주체는 정보주체 본인이 권리를 행사하거나 법정대리인을 통하여 권리를 행사할 수 있습니다.</p>
-
-<p>② 권리 행사는 톡톡케어에 대해 <strong>「개인정보 보호법 시행령」 제41조제1항</strong>에 따라 전자우편, 인터넷 등을 통하여 하실 수 있으며, 톡톡케어는 이에 대해 지체 없이 조치하겠습니다.</p>
+<h2>제8조 (개인정보 보호책임자)</h2>
+<p>톡톡케어는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만 처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
 <ul>
-  <li>전자우편: <a href="mailto:jhw6097@hanyang.ac.kr">jhw6097@hanyang.ac.kr</a></li>
-  <li>웹페이지 내 '피드백 보내기' 링크: <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4zR9GG2Iwltru0dPET4n3Yi8uTFZxYxIqAIv7QHrWibg-zQ/viewform?usp=header" target="_blank" rel="noopener noreferrer">https://docs.google.com/forms/d/e/1FAIpQLSd4zR9GG2Iwltru0dPET4n3Yi8uTFZxYxIqAIv7QHrWibg-zQ/viewform?usp=header</a></li>
+    <li><strong>성명:</strong> 이재환</li>
+    <li><strong>직책:</strong> 대표</li>
+    <li><strong>연락처:</strong> <a href="mailto:jhw6097@hanyang.ac.kr">jhw6097@hanyang.ac.kr</a></li>
 </ul>
 
-<h2>제8조(정보주체의 권익침해에 대한 구제방법)</h2>
-<p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보 분쟁조정위원회, 한국인터넷진흥원 개인정보 침해 신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다.</p>
-<p>이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래 기관에 문의하시기 바랍니다.</p>
+<h2>제9조 (권익침해 구제방법)</h2>
+<p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보 분쟁조정위원회, 한국인터넷진흥원 개인정보 침해 신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래 기관에 문의하시기 바랍니다.</p>
 <ul>
-  <li>개인정보 분쟁조정위원회 : (국번없이) 1833-6972 (<a href="http://www.kopico.go.kr" target="_blank" rel="noopener noreferrer">www.kopico.go.kr</a>)</li>
-  <li>개인정보침해 신고센터 : (국번없이) 118 (<a href="https://privacy.kisa.or.kr" target="_blank" rel="noopener noreferrer">privacy.kisa.or.kr</a>)</li>
-  <li>경찰청 : (국번없이) 182 (<a href="https://ecrm.police.go.kr" target="_blank" rel="noopener noreferrer">ecrm.police.go.kr</a>)</li>
+    <li>개인정보 분쟁조정위원회 : (국번없이) 1833-6972 (<a href="http://www.kopico.go.kr" target="_blank" rel="noopener noreferrer">www.kopico.go.kr</a>)</li>
+    <li>개인정보침해 신고센터 : (국번없이) 118 (<a href="https://privacy.kisa.or.kr" target="_blank" rel="noopener noreferrer">privacy.kisa.or.kr</a>)</li>
+    <li>대검찰청 : (국번없이) 1301 (<a href="http://www.spo.go.kr" target="_blank" rel="noopener noreferrer">www.spo.go.kr</a>)</li>
+    <li>경찰청 : (국번없이) 182 (<a href="https://ecrm.police.go.kr" target="_blank" rel="noopener noreferrer">ecrm.police.go.kr</a>)</li>
 </ul>
 
-<h2>제9조(개인정보 처리방침의 변경에 관한 사항)</h2>
-<p>본 개인정보 처리방침은 2025년 5월 20일부터 적용됩니다.</p>
+<h2>제10조 (개인정보 처리방침의 변경)</h2>
+<p>① 이 개인정보처리방침은 2025년 7월 9일부터 시행됩니다.</p>
+<p>② 개인정보 처리방침이 변경되는 경우, 변경사항의 시행 7일 전부터 공지사항 등을 통해 사전에 고지하겠습니다.</p>
+<p>③ 이전의 개인정보처리방침은 아래에서 확인하실 수 있습니다.</p>
+<ul>
+    <li><a href="https://lee6097.github.io/talktalkcareprivacy/20250520" target="_blank" rel="noopener noreferrer">2025.5.20. ~ 2025.7.8. 버전 보기</a></li>
+</ul>
 
 </body>
 </html>
