--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 </ul>
 
 <h2>제2조 (처리하는 개인정보의 항목)</h2>
-<p>톡톡케어는 회원가입 절차 없이 서비스를 제공하며, 사용자를 특정할 수 있는 이름, 전화번호, 이메일, IP주소 등의 정보를 수집하지 않습니다. 서비스 제공 과정에서 처리되는 개인정보 및 데이터는 다음과 같습니다.</p>
+<p>톡톡케어는 회원가입 절차 없이 서비스를 제공하며, 사용자를 특정할 수 있는 이름, 전화번호, 이메일, IP주소 등의 정보를 수집하지 않습니다.</p>
+<p>사용자가 AI 챗봇과의 대화를 시작하고 질문을 입력하는 행위는, 답변 생성 및 출처 제공이라는 서비스 목적을 위해 본 조에서 명시한 개인정보 및 데이터의 수집·이용에 동의하는 것으로 간주됩니다.</p>
+<p>이에 따라 서비스 제공 과정에서 처리되는 개인정보 및 데이터는 다음과 같습니다.</p>
 <ul>
     <li><strong>채팅 내용:</strong> 사용자가 채팅창에 직접 입력하는 질문 내용(건강 정보 등 포함) 및 이를 기반으로 생성된 검색어
         <ul style="margin-top: 8px;"><li><strong>처리 방식:</strong> 위 정보는 답변 및 검색 결과 생성을 위한 API 호출 목적으로만 일시적으로 메모리에서 처리되며, 톡톡케어의 서버 및 데이터베이스에 기록 또는 저장되지 않습니다.</li></ul>
@@ -108,7 +110,7 @@
     <tbody>
         <tr>
             <td>OpenAI, L.L.C. (미국)</td>
-            <td>AI 챗봇 답변 생성</td>
+            <td>AI 챗봇 답변 및 검색어 생성</td>
             <td>사용자가 채팅창에 입력한 내용</td>
             <td>OpenAI의 데이터 처리 방침에 따름</td>
         </tr>
@@ -126,7 +128,7 @@
 
 <h2>제6조 (정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)</h2>
 <p>① 정보주체는 톡톡케어에 대해 언제든지 개인정보 처리에 관한 의견 제출 및 고충 처리를 요구할 수 있습니다.</p>
-<p>② 톡톡케어는 사용자의 대화 내용을 서버에 저장하지 않으므로, <strong>「개인정보 보호법」 제35조</strong>에 따른 개인정보의 열람, <strong>제36조</strong>에 따른 정정·삭제, <strong>제37조</strong>에 따른 처리정지 요구는 기술적으로 불가능합니다. 사용자는 앱 내 '대화 초기화' 기능 등을 통해 직접 대화 내용을 삭제함으로써 정보 삭제 및 처리정지와 동일한 효과를 얻을 수 있습니다.</p>
+<p>② 톡톡케어는 사용자의 대화 내용을 서버 및 데이터베이스에 저장하지 않으므로, <strong>「개인정보 보호법」 제35조</strong>에 따른 개인정보의 열람, <strong>제36조</strong>에 따른 정정·삭제, <strong>제37조</strong>에 따른 처리정지 요구는 기술적으로 불가능합니다. 사용자는 앱 내 '대화 초기화' 기능 등을 통해 직접 대화 내용을 삭제함으로써 정보 삭제 및 처리정지와 동일한 효과를 얻을 수 있습니다.</p>
 <p>③ 제1항에 따른 권리 행사는 제8조에 명시된 개인정보 보호책임자의 연락처를 통해 하실 수 있으며, 톡톡케어는 이에 대해 지체 없이 조치하겠습니다.</p>
 
 <h2>제7조 (개인정보의 안전성 확보조치에 관한 사항)</h2>
@@ -145,7 +147,7 @@
 </ul>
 
 <h2>제9조 (권익침해 구제방법)</h2>
-<p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보 분쟁조정위원회, 한국인터넷진흥원 개인정보 침해 신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래 기관에 문의하시기 바랍니다.</p>
+<p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보 분쟁조정위원회, 한국인터넷진흥원 개인정보 침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래 기관에 문의하시기 바랍니다.</p>
 <ul>
     <li>개인정보 분쟁조정위원회 : (국번없이) 1833-6972 (<a href="http://www.kopico.go.kr" target="_blank" rel="noopener noreferrer">www.kopico.go.kr</a>)</li>
     <li>개인정보침해 신고센터 : (국번없이) 118 (<a href="https://privacy.kisa.or.kr" target="_blank" rel="noopener noreferrer">privacy.kisa.or.kr</a>)</li>
